app/globals.css
@import "tailwindcss";
@plugin "tailwindcss-react-aria-components";

@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));

@theme {
  --font-sans: "Nunito Sans", sans-serif;

  --text-*: initial;

  --text-xs: 0.75rem;
  --text-xs--line-height: calc(1 / 0.75);
  --text-sm: 0.875rem;
  --text-sm--line-height: calc(1.375 / 0.875);
  --text-base: 1rem;
  --text-base--line-height: calc(1.5 / 1);
  --text-lg: 1.125rem;
  --text-lg--line-height: calc(1.4375 / 1.125);
  --text-xl: 1.25rem;
  --text-xl--line-height: calc(1.625 / 1.25);
  --text-2xl: 1.5rem;
  --text-2xl--line-height: calc(1.875 / 1.5);
  --text-3xl: 1.75rem;
  --text-3xl--line-height: calc(2.25 / 1.75);
  --text-4xl: 2.125rem;
  --text-4xl--line-height: calc(2.75 / 2.125);
  --text-5xl: 2.625rem;
  --text-5xl--line-height: calc(3.5 / 2.625);
}

::view-transition-new(.toast):only-child {
  animation: slide-in 300ms;
}

::view-transition-old(.toast):only-child {
  animation: slide-out 300ms;
  animation-fill-mode: forwards;
}

@keyframes slide-out {
  to {
    translate: -100% 0;
    opacity: 0;
    visibility: hidden;
  }
}

@keyframes slide-in {
  from {
    translate: -100% 0;
    opacity: 0;
  }
}

@layer utilities {
  .bg-dashed-border {
    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='12' ry='12' stroke='%23d1d5db' stroke-width='2' stroke-dasharray='4%2c8' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
    border-radius: 12px;
    background-repeat: no-repeat;
    background-size: 100% 100%;

    @variant dark {
      background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='12' ry='12' stroke='%234b5563' stroke-width='2' stroke-dasharray='4%2c8' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
    }
  }
}

@utility no-scrollbar {
  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
}

